# ConnectFourTDD

./: CMakeLists.txt
src/: board.cpp  game.cpp
ut/: boardTests.cpp  gameTests.cpp
